k8s/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ranieri-prod
  labels:
    environment: production
    app: ranieri-core
