k8s/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ranieri-service
  namespace: ranieri-prod
  labels:
    app: ranieri-api
spec:
  selector:
    app: ranieri-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: ClusterIP
